@@ -1,1 +1,1 @@
-{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304102222","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","comment":"Added autofill location and auto complete subcategory","uri":"content://com.llamalab.automate.provider/flows/22/data"}
+{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304102310","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","comment":"Removed old location input, hidden extra fields, increased size of currency and quantity inputs","uri":"content://com.llamalab.automate.provider/flows/22/data"}
