@@ -25,7 +25,7 @@
                 "🖱 Digital"
         ],
         [
-                "Dsicounts",
+                "Discounts",
                 "🏷️ Discounts"
         ],
         [
