@@ -110,7 +110,7 @@
 
         div.quantity>span span.quantityUnit \{ float: left;
         width: 20%;
-        font-size: 0.8em
+        font-size: 1em
         }
 
         div.costs \{ width: 100%;
@@ -122,7 +122,7 @@
         }
 
         div.costs>span span.currency select \{ font-weight: 900;
-        font-size: 1em
+        font-size: 1.5em
         }
 
         div.costs>span input#amount \{ float: none;
@@ -153,17 +153,16 @@
                                                 </select></div>
                                 </div><br><br>
                                 <div class='meta'>
-                                        <div class='location'>📍 <input type='text' name='location' id='location'
-                                                        value='{location}' required>
+                                        <div class='location'>📍
                                                 <input name='address' placeholder='Address' type='text'
                                                         autocomplete='address-line1' />
-                                                <input name='city' placeholder='City' type='text'
+                                                <input name='city' placeholder='City' type='hidden'
                                                         autocomplete='address-level2' />
-                                                <input name='state' placeholder='State' type='text'
+                                                <input name='state' placeholder='State' type='hidden'
                                                         autocomplete='address-level1' />
-                                                <input name='country' placeholder='Country' type='text'
+                                                <input name='country' placeholder='Country' type='hidden'
                                                         autocomplete='country' />
-                                                <input name='postcode' placeholder='Postcode' type='text'
+                                                <input name='postcode' placeholder='Postcode' type='hidden'
                                                         autocomplete='postal-code' />
                                                 <br>📅 <select name='frequency' id='frequency' size='1'
                                                         style='font-size:small; font-weight: 700'>
