@@ -49,3 +49,4 @@
 202304101854: Exclude emoticons in transactions list values
 202304102042: Create arrays for typelists with unicode
 202304102222: Added autofill location and auto complete subcategory
+202304102311: Removed old location input, hidden extra fields, increased size of currency and quantity inputs
